fix the overflow on body again

--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
+
+}
+.main_wrapper{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    overflow: hidden;
 }
 main{
     margin: auto;
